@@ -3,6 +3,7 @@
 * New Features
 
   * XML::Node#children= sets the node's inner html (much like #inner_html=), but returns the reparent node(s).
+  * XSLT supports function extensions. #336
 
 * Bugfixes
 
